; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_slub.c_lock_and_freeze_slab.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_slub.c_lock_and_freeze_slab.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kmem_cache_node = type { i32 }
%struct.page = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kmem_cache_node*, %struct.page*)* @lock_and_freeze_slab to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lock_and_freeze_slab(%struct.kmem_cache_node* %0, %struct.page* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.kmem_cache_node*, align 8
  %5 = alloca %struct.page*, align 8
  store %struct.kmem_cache_node* %0, %struct.kmem_cache_node** %4, align 8
  store %struct.page* %1, %struct.page** %5, align 8
  %6 = load %struct.page*, %struct.page** %5, align 8
  %7 = call i64 @slab_trylock(%struct.page* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %19

9:                                                ; preds = %2
  %10 = load %struct.page*, %struct.page** %5, align 8
  %11 = getelementptr inbounds %struct.page, %struct.page* %10, i32 0, i32 0
  %12 = call i32 @list_del(i32* %11)
  %13 = load %struct.kmem_cache_node*, %struct.kmem_cache_node** %4, align 8
  %14 = getelementptr inbounds %struct.kmem_cache_node, %struct.kmem_cache_node* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = add nsw i32 %15, -1
  store i32 %16, i32* %14, align 4
  %17 = load %struct.page*, %struct.page** %5, align 8
  %18 = call i32 @__SetPageSlubFrozen(%struct.page* %17)
  store i32 1, i32* %3, align 4
  br label %20

19:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %20

20:                                               ; preds = %19, %9
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i64 @slab_trylock(%struct.page*) #1

declare dso_local i32 @list_del(i32*) #1

declare dso_local i32 @__SetPageSlubFrozen(%struct.page*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
